# SolrHelper

./: .gitignore  .windsurfrules  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.augment/rules/: project.md
doc/: plan.md  technical.md
solr/: solr.xml
solr/conf/: schema.xml
solr/configsets/testing/conf/: protwords.txt  schema.xml  solrconfig.xml  stopwords.txt  synonyms.txt
solr/configsets/testing/conf/lang/: stopwords_de.txt  stopwords_en.txt
src/solr_helper/: config.py  main.py  solr_client.py
src/solr_helper/web/: app.py
src/solr_helper/web/routes/: __init__.py  api.py  connection.py  record.py  search.py
src/solr_helper/web/templates/: _base.html  _edit_form.html  _header.html  _record_row.html  _toast.html  connections.html  index.html  record.html  search_results.html  use_connection.html
src/solr_helper/web/utils/: __init__.py  auth.py  helpers.py
