[project]
name = "solr-helper"
version = "1.0.1"
authors = [
  { name="Thomas Baer", email="thomas.baer@slub-dresden.de" },
]
description = "Tool zum Anzeigen und Bearbeiten von Solr-Dokumenten."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["solr", "helper", "flask", "htmx", "search", "admin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=3.1.1",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "pysolr>=3.10.0",
    "requests>=2.32.4",
    "toml>=0.10.2"
]

[project.scripts]
solr-helper = "solr_helper.main:cli"

[project.urls]
"Homepage" = "https://github.com/thomsbe/SolrHelper"
"Repository" = "https://github.com/thomsbe/SolrHelper"
"Bug Tracker" = "https://github.com/thomsbe/SolrHelper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
